force-app/main/default/objects/OpportunityLineItem/fields/Breakfast__c.field-meta.xml
<CustomField>
    <fullName>Breakfast__c</fullName>
    <label>Breakfast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>