force-app/main/default/objects/OpportunityLineItem/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>(VAT__c * (Total_rate__c -  Breakfast__c )) *  Opportunity_Line_Item_Details__r.Supplier__r.Supplier_Comission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>