force-app/main/default/objects/OpportunityLineItem/fields/Extra_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extra_Charges_Amount__c</fullName>
    <label>Extra Charges Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>