force-app/main/default/objects/OpportunityLineItem/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <label>Markup %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>