force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Line_Item_Details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Line Item Details</label>
    <referenceTo>Opprtunity_Line_Item_Details__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>