force-app/main/default/objects/OpportunityLineItem/fields/Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Amount__c</fullName>
    <formula>Total_rate__c  +  Commission__c + Breakfast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>